data/derived/sp14/progs/unify/prog2022.ml.out
Characters 98-123:
  if (diff < 0) then List.append ((clone 0 (abs diff)),l1)
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
